--- a/front/src/app/modules/home/home-page/home-page.component.html
+++ b/front/src/app/modules/home/home-page/home-page.component.html
@@ -31,7 +31,6 @@
       Voces Voluntarias: Experiencias compartidas en horas de compromiso
     </h2>
     <div class="flex flex-wrap justify-center gap-[55px]">
-
       <app-testimonials
         *ngFor="let item of testimonialsData"
         [image]="item.image"
@@ -41,6 +40,6 @@
       ></app-testimonials>
     </div>
   </section>
-
+  <app-exchange></app-exchange>
   <app-whatsapp-button></app-whatsapp-button>
 </section>
