--- a/front/src/app/modules/auth/components/form-coordinators-register/form-coordinators-register.component.html
+++ b/front/src/app/modules/auth/components/form-coordinators-register/form-coordinators-register.component.html
@@ -6,6 +6,7 @@
     [routeContinue]="routeBtnContinue"
     [textBtn]="textBtn"
     [errors]="errors"
+    [message]="messageModal"
   ></app-modal-status-form>
   <header
     class="w-full flex flex-col items-center justify-center gap-4 text-center"
@@ -194,7 +195,7 @@
             "
             class="flex-initial text-end text-redError"
           >
-            Por favor, ingresa un teléfono válido.
+            Por favor, ingresa un teléfono válido para Argentina.
           </p>
         </div>
       </div>
