--- a/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.css
+++ b/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.css
@@ -1,49 +1,54 @@
 .sidebar {
   writing-mode: vertical-lr;
   transform: rotate(180deg);
-  background: linear-gradient(to left top,
-      rgb(255, 55, 147),
-      rgb(63, 40, 131),
-      rgb(255, 64, 33));
-
+  background: linear-gradient(
+    to left top,
+    rgb(255, 55, 147),
+    rgb(63, 40, 131),
+    rgb(255, 64, 33)
+  );
 }
 
-.content{
+.content {
   /* padding: clamp(1rem, 0.572rem + 2.14vw, 2.5rem); */
   padding: clamp(0.938rem, 0.597rem + 1.7vw, 1.875rem);
-
 }
 
-.title{
-font-size: clamp(1.25rem, 0.536rem + 3.57vw, 3.75rem);
+.title {
+  font-size: clamp(1.25rem, 0.536rem + 3.57vw, 3.75rem);
 }
 
-.rewards{
+.rewards {
   font-size: clamp(1rem, 0.75rem + 1.25vw, 1.875rem);
 }
 
-.recommended{
-  font-size:clamp(0.938rem, 0.848rem + 0.45vw, 1.25rem) ;
+.recommended {
+  font-size: clamp(0.938rem, 0.848rem + 0.45vw, 1.25rem);
 }
 
-.card{
+.card {
   width: clamp(7.5rem, 5.714rem + 8.93vw, 13.75rem);
-  height:clamp(10rem, 7.857rem + 10.71vw, 17.5rem) ;
+  height: clamp(10rem, 7.857rem + 10.71vw, 17.5rem);
 }
 
-.image{
+.cardProduct {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.image {
   height: clamp(5.125rem, 3.911rem + 6.07vw, 9.375rem);
 }
 
-.detail{
+.detail {
   padding: clamp(0.313rem, 0.116rem + 0.98vw, 1rem) 0;
 }
 
-p{
+p {
   font-size: clamp(0.75rem, 0.679rem + 0.36vw, 1rem);
 }
 
-button{
+button {
   font-size: clamp(0.75rem, 0.679rem + 0.36vw, 1rem);
 }
 
@@ -52,4 +57,3 @@ button:hover {
   background-color: #ffffff;
   border: 2px solid rgb(63, 40, 131);
 }
-
