se agregaron links y se ajustó la funcionalidad del navbar

--- a/front/src/app/modules/home/components/testimonials/testimonials.component.html
+++ b/front/src/app/modules/home/components/testimonials/testimonials.component.html
@@ -1,4 +1,4 @@
-<article
+<article id="testimonials"
   class="relative flex flex-col justify-start w-[364px] h-[400px] border-1 border-[lightGray] rounded-md shadow-2xl">
   <figure class="w-full absolute top-0 bg-midnightBlue/[.6] rounded-t-lg h-[100px]">
     <img [src]="image"
