--- a/front/src/app/shared/components/navbar/navbar.component.html
+++ b/front/src/app/shared/components/navbar/navbar.component.html
@@ -149,9 +149,7 @@
             class="cursor-pointer lg:hover:text-blueViolet"
             (click)="handleMenu()"
           >
-          <a href="#testimonials">
-            Testimonios de voluntarios
-            </a>
+            <a href="#testimonials"> Testimonios de voluntarios </a>
           </li>
           <li class="text-xl cursor-pointer" (click)="handleMenu()">
             <a routerLink="/contacto"> Contacto </a>
@@ -220,7 +218,9 @@
                 <li
                   class="w-full flex flex-col gap-2 items-center justify-center"
                 >
-                  <!-- <span class="text-lightGray">{{ dataUser.email }}</span> -->
+                  <span class="text-lightGray text-center flex flex-wrap">{{
+                    dataUser.email
+                  }}</span>
                   <figure
                     *ngIf="dataUser.image?.imageUrl"
                     class="w-[80px] h-[80px] aspect-square rounded-full border border-lightGray shadow-lg shadow-lightGray"
