--- a/front/src/app/shared/components/footer/footer.component.html
+++ b/front/src/app/shared/components/footer/footer.component.html
@@ -42,9 +42,10 @@
           <b class="text-lg lg:text-xl">Quienes somos</b>
           <p class="lg:text-lg cursor-pointer lg:hover:text-blueViolet">
             <a routerLink="/nosotros">Acerca de nosotros</a>
-           
+
           <p class="lg:text-lg cursor-pointer lg:hover:text-blueViolet">
-            Nuestro equipo
+            <a routerLink="/team">Nuestro equipo</a>
+
           </p>
         </li>
         <li>
