--- a/front/src/app/modules/dashboard/components/dashboardOrganization/volunteers-table/volunteers-table.component.html
+++ b/front/src/app/modules/dashboard/components/dashboardOrganization/volunteers-table/volunteers-table.component.html
@@ -53,11 +53,7 @@
             <td class="px-6 py-4 whitespace-no-wrap">{{ item.vacancies }}</td>
 
             <td
-              class="py-4 whitespace-no-wrap text-center flex items-center justify-center"
-            ></td>
-
-            <td
-              class="py-4 whitespace-no-wrap text-center flex items-center justify-center"
+              class="px-6 py-4 whitespace-no-wrap text-center flex items-center justify-center"
             >
               <button
                 mat-icon-button
