the registration/login button with Google was removed

--- a/front/src/app/modules/auth/components/form-coordinators-register/form-coordinators-register.component.html
+++ b/front/src/app/modules/auth/components/form-coordinators-register/form-coordinators-register.component.html
@@ -302,13 +302,13 @@
         >
           Registrate
         </button>
-        <b class="lg:text-lg">o</b>
+        <!-- <b class="lg:text-lg">o</b>
         <button
           class="w-full flex items-center justify-center gap-2 py-2 border border-darkSlateBlue rounded-md font-normal lg:text-lg"
         >
           <img src="/assets/logo/logo-google.svg" />
           Registrate con Google
-        </button>
+        </button> -->
         <p class="text-sm">
           ¿Ya tienes una cuenta?
 
