--- a/front/src/app/modules/auth/components/form-login/form-login.component.html
+++ b/front/src/app/modules/auth/components/form-login/form-login.component.html
@@ -111,13 +111,13 @@
         >
           Iniciar sesión
         </button>
-        <b>o</b>
+        <!-- <b>o</b>
         <button
           class="w-full flex items-center justify-center gap-2 py-2 border border-darkSlateBlue rounded-md font-normal"
         >
           <img src="/assets/logo/logo-google.svg" />
           Iniciar sesión con Google
-        </button>
+        </button> -->
         <p class="text-sm">
           ¿Todavía no tienes una cuenta?
           <span
