--- a/front/src/app/modules/auth/components/form-volunteerregister/form-volunteerregister.component.html
+++ b/front/src/app/modules/auth/components/form-volunteerregister/form-volunteerregister.component.html
@@ -199,13 +199,13 @@
         >
           Registrate
         </button>
-        <b>o</b>
+        <!-- <b>o</b>
         <button
           class="w-full flex items-center justify-center gap-2 py-2 border border-mediumViolet rounded-md font-normal"
         >
           <img src="/assets/logo/logo-google.svg" />
           Registrate con Google
-        </button>
+        </button> -->
         <p class="text-sm">
           ¿Ya tienes una cuenta?
 
