various style settings and links

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -3,5 +3,6 @@
   <section class="content_main">
     <router-outlet></router-outlet>
   </section>
+  <app-whatsapp-button></app-whatsapp-button>
   <app-footer></app-footer>
 </main>
