--- a/front/src/app/shared/components/footer/footer.component.html
+++ b/front/src/app/shared/components/footer/footer.component.html
@@ -29,9 +29,9 @@
       >
         <li>
           <b class="text-lg lg:text-xl">Descubrir</b>
-          <p class="lg:text-lg cursor-pointer lg:hover:text-blueViolet">
+          <!-- <p class="lg:text-lg cursor-pointer lg:hover:text-blueViolet">
             Organizaciones
-          </p>
+          </p> -->
           <p class="lg:text-lg cursor-pointer lg:hover:text-blueViolet">
             <a routerLink="voluntariados">
               Oportunidades <br />de voluntariado
