--- a/front/src/app/modules/dashboard/components/dashboardVolunteer/header/header.component.html
+++ b/front/src/app/modules/dashboard/components/dashboardVolunteer/header/header.component.html
@@ -37,11 +37,11 @@
     </figure>
     <div class="flex flex-col items-start justify-start text-start">
       <h1 class="text-white font-bold sm:text-xl">{{ dataHeader.fullName }}</h1>
-      <ul class="flex items-center justify-center gap-2 text-xs sm:text-sm">
+      <!-- <ul class="flex items-center justify-center gap-2 text-xs sm:text-sm">
         <li>⭐</li>
         <li>⭐</li>
         <li>⭐</li>
-      </ul>
+      </ul> -->
     </div>
   </article>
   <div
