--- a/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.html
+++ b/front/src/app/modules/home/components/slider-exchange/slider-exchange.component.html
@@ -45,7 +45,7 @@
           (click)="addToCart(product)"
           class="bg-darkSlateBlue px-2 py-1 rounded text-white border-2 border-darkSlateBlue"
         >
-          Agregar al carrito
+          Lo quiero
         </button>
       </div>
     </div>
