--- a/front/src/app/components/volunteer-filters/volunteer-filters.component.html
+++ b/front/src/app/components/volunteer-filters/volunteer-filters.component.html
@@ -24,9 +24,10 @@
         <mat-expansion-panel-header>
           <mat-panel-title> Categoría </mat-panel-title>
         </mat-expansion-panel-header>
+        
         <div class="flex flex-col">
           <mat-checkbox class="example-margin" (change)="getAllVolunteerings()"
-            >Todas.</mat-checkbox
+            >Todas</mat-checkbox
           >
           <mat-checkbox
             class="example-margin"
@@ -46,7 +47,7 @@
         </mat-expansion-panel-header>
         <div class="flex flex-col">
           <mat-checkbox class="example-margin" (change)="getAllVolunteerings()"
-            >Todas.</mat-checkbox
+            >Todas</mat-checkbox
           >
           <mat-checkbox
             class="example-margin"
@@ -66,7 +67,7 @@
         </mat-expansion-panel-header>
         <div class="flex flex-col">
           <mat-checkbox class="example-margin" (change)="getAllVolunteerings()"
-            >Todas.</mat-checkbox
+            >Todas</mat-checkbox
           >
           <mat-checkbox
             class="example-margin"
@@ -85,7 +86,7 @@
           <mat-panel-title> Fecha de publicación </mat-panel-title>
         </mat-expansion-panel-header>
         <div class="flex flex-col">
-          <mat-checkbox class="example-margin">Todas.</mat-checkbox>
+          <mat-checkbox class="example-margin">Todas</mat-checkbox>
           <mat-checkbox
             class="example-margin"
             *ngFor="let checkbox of publicationDate"
@@ -126,17 +127,10 @@
           </mat-expansion-panel-header>
 
           <div class="flex flex-col">
-            <mat-checkbox class="example-margin">Todas.</mat-checkbox>
-
-            <mat-checkbox class="example-margin"
-              >Medio Ambiente y Fauna.</mat-checkbox
-            >
-            <mat-checkbox class="example-margin"
-              >Asistencia Social.</mat-checkbox
-            >
-            <mat-checkbox class="example-margin"
-              >Salud y Discapacidad.</mat-checkbox
-            >
+            <mat-checkbox class="example-margin">Todas</mat-checkbox>
+            <mat-checkbox class="example-margin">Medioambiente y fauna</mat-checkbox>
+            <mat-checkbox class="example-margin">Asistencia social</mat-checkbox>
+            <mat-checkbox class="example-margin">Salud y discapacidad</mat-checkbox>
           </div>
         </mat-expansion-panel>
 
@@ -147,11 +141,11 @@
             <mat-panel-title> Modalidad </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="flex flex-col">
-            <mat-checkbox class="example-margin">Todas.</mat-checkbox>
+            <mat-checkbox class="example-margin">Todas</mat-checkbox>
 
-            <mat-checkbox class="example-margin">Presencial.</mat-checkbox>
-            <mat-checkbox class="example-margin">Hibrido.</mat-checkbox>
-            <mat-checkbox class="example-margin">Remoto.</mat-checkbox>
+            <mat-checkbox class="example-margin">Presencial</mat-checkbox>
+            <mat-checkbox class="example-margin">Hibrido</mat-checkbox>
+            <mat-checkbox class="example-margin">Remoto</mat-checkbox>
           </div>
         </mat-expansion-panel>
 
@@ -162,23 +156,23 @@
             <mat-panel-title> Organizaciones/Fundaciones </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="flex flex-col">
-            <mat-checkbox class="example-margin">Todas.</mat-checkbox>
+            <mat-checkbox class="example-margin">Todas</mat-checkbox>
             <mat-checkbox class="example-margin"
-              >Asociación Civil Manos Abiertas.</mat-checkbox
+              >Asociación Civil Manos Abiertas</mat-checkbox
             >
             <mat-checkbox class="example-margin"
-              >Banco de Alimentos Córdoba.</mat-checkbox
+              >Banco de Alimentos Córdoba</mat-checkbox
             >
             <mat-checkbox class="example-margin"
-              >Caritas Argentina.</mat-checkbox
+              >Caritas Argentina</mat-checkbox
             >
             <mat-checkbox class="example-margin"
-              >Cruz Roja Argentina.</mat-checkbox
+              >Cruz Roja Argentina</mat-checkbox
             >
-            <mat-checkbox class="example-margin">Fundación Sí.</mat-checkbox>
-            <mat-checkbox class="example-margin">Greenpeace.</mat-checkbox>
-            <mat-checkbox class="example-margin">Techo.</mat-checkbox>
-            <mat-checkbox class="example-margin">Voluntarios UNC.</mat-checkbox>
+            <mat-checkbox class="example-margin">Fundación Sí</mat-checkbox>
+            <mat-checkbox class="example-margin">Greenpeace</mat-checkbox>
+            <mat-checkbox class="example-margin">Techo</mat-checkbox>
+            <mat-checkbox class="example-margin">Voluntarios UNC</mat-checkbox>
           </div>
         </mat-expansion-panel>
 
@@ -196,7 +190,7 @@
             <mat-checkbox class="example-margin"
               >La semana pasada.</mat-checkbox
             >
-            <mat-checkbox class="example-margin">El mes pasado.</mat-checkbox>
+            <mat-checkbox class="example-margin">El mes pasado</mat-checkbox>
           </div>
         </mat-expansion-panel>
       </mat-expansion-panel>
