--- a/front/src/app/pages/team/team.component.html
+++ b/front/src/app/pages/team/team.component.html
@@ -12,7 +12,7 @@
         alt="Exequiel Maydana" class="img-responsive" />
     </div>
     <div class="member-text">
-      <div class="category">
+      <div class="name">
         <span class="name">Exequiel Maydana</span>
       </div>
       <div class="title-member h-16">
@@ -36,7 +36,7 @@
       <img src="../../../assets/imgs/Mauri.png" alt="Mauricio Demasi" class="img-responsive" />
     </div>
     <div class="member-text">
-      <div class="category">
+      <div class="name">
         <span class="name">Mauricio Demasi</span>
       </div>
       <div class="title-member h-16">
@@ -60,7 +60,7 @@
         src="../../../assets/imgs/Cari.png"
         alt="Carina Bosio" class="img-responsive" /></div>
     <div class="member-text">
-      <div class="category">
+      <div class="name">
         <span class="name">Carina Bosio</span>
       </div>
       <div class="title-member h-16">
