--- a/front/src/app/modules/dashboard/components/dashboardOrganization/volunteers-table/volunteers-table.component.html
+++ b/front/src/app/modules/dashboard/components/dashboardOrganization/volunteers-table/volunteers-table.component.html
@@ -18,6 +18,9 @@
               Descripción
             </th>
             <th class="px-6 py-3 bg-gray-50 text-left leading-4 tracking-wider">
+              Categoría
+            </th>
+            <th class="px-6 py-3 bg-gray-50 text-left leading-4 tracking-wider">
               Ubicación
             </th>
             <th class="px-6 py-3 bg-gray-50 text-left leading-4 tracking-wider">
@@ -40,6 +43,7 @@
             <td class="px-6 py-4 whitespace-no-wrap">
               {{ item.description }}
             </td>
+            <td class="px-6 py-4 whitespace-no-wrap">{{ item.category }}</td>
             <td class="px-6 py-4 whitespace-no-wrap">{{ item.address }}</td>
             <td class="px-6 py-4 whitespace-no-wrap">{{ item.modeOfwork }}</td>
             <td class="px-6 py-4 whitespace-no-wrap">{{ item.workTime }}</td>
