--- a/front/src/app/pages/organization-details/organization-details.component.html
+++ b/front/src/app/pages/organization-details/organization-details.component.html
@@ -1,9 +1,9 @@
-<section class="w-full flex flex-col gap-4 mt-[115px] mb-12">
+<section class="w-full flex flex-col gap-4 mb-12">
   <header class="w-full relative">
-    <figure
-      class="w-full h-[250px] flex flex-col items-center justify-start gap-2 sm:h-[350px]"
-    >
-      <img
+    <!-- <figure
+      class="w-full h-[250px] flex flex-col items-center justify-start gap-2 sm:h-[350px]" -->
+
+    <!-- <img
         *ngIf="!organization[0]?.coverPage"
         src="/assets/logo/logohand.svg"
         alt="logo voluntime"
@@ -14,38 +14,46 @@
         [src]="organization[0]?.coverPage.imageUrl"
         alt="Subir imagen"
         class="w-full h-full object-cover"
-      />
-    </figure>
-    <article
-      class="absolute p-4 w-full left-0 right-0 bottom-0 bg-bgHeaderOrganization sm:p-8"
-    >
-      <h2 class="text-4xl text-white font-extrabold Tsha md:text-5xl">
-        {{ organization[0]?.name }}
-      </h2>
-      <a routerLink="#" class="text-white text-sm Tsha md:text-lg"
-        >www.ejemplo.com.ar</a
-      >
+      /> -->
+
+
+    <!-- </figure> -->
+    <div class="header-org"></div>
+    <article class="absolute flex justify-between items-end w-full h-full left-0 right-0 bottom-0 px-10 pb-6">
+      <div class="flex flex-col justify-end ">
+        <h2 class="text-4xl text-white font-extrabold Tsha md:text-5xl">
+          {{ organization[0]?.name }}
+        </h2>
+        <a routerLink="#" class="text-white text-sm Tsha md:text-lg">{{ organization[0]?.email }}</a>
+      </div>
+
+      <!-- Acá iría la imagen -->
+
+      <div class=" ">
+        <img *ngIf="organization[0]?.image && organization[0]?.image.imageUrl" [src]="organization[0]?.image.imageUrl"
+          alt="Logo voluntime" class="w-[100px] h-[100px] object-cover imageUpload" class="w-[215px] h-[100px] mr-8" />
+      </div>
     </article>
   </header>
   <article class="w-full px-2 sm:px-8">
-    <ul class="flex flex-col gap-6 sm:w-[80%]">
-      <li>
+    <ul class="flex flex-col gap-16 sm:w-[80%]">
+      <li class="mt-10">
         <span class="text-2xl font-bold md:text-3xl">
           Voluntariado en {{ organization[0]?.name }}
         </span>
-        <p class="sm:text-lg md:text-xl">{{ organization[0]?.description }}</p>
+        <p class="sm:text-lg md:text-xl mt-6">{{ organization[0]?.description }}</p>
       </li>
       <li>
         <span class="text-2xl font-bold md:text-3xl">
           Tipos de Voluntariados
         </span>
-        <p class="sm:text-lg md:text-xl">{{ organization[0]?.category }}</p>
+        <p class="sm:text-lg md:text-xl mt-6">{{ organization[0]?.category }}</p>
       </li>
       <li>
         <span class="text-2xl font-bold md:text-3xl">
           Duracion de los programas de voluntariados
         </span>
-        <p class="sm:text-lg md:text-xl">
+        <p class="sm:text-lg md:text-xl mt-6">
           Cada oportunidad de voluntariado indica el tiempo estimado necesario
           para completar la tarea. Esto te permite elegir actividades que se
           ajusten a tu disponibilidad y compromiso. Las organizaciones
@@ -55,10 +63,21 @@
         </p>
       </li>
       <li>
-        <span class="text-2xl font-bold md:text-3xl">
+        <span class="text-2xl font-bold md:text-3xl mt-6">
           Oportunidades de voluntariados ofrecidos
         </span>
-        <p class=""></p>
+        <p class="sm:text-lg md:text-xl mt-6" *ngIf="volunteerings.length > 0">
+
+        </p>
+        <ul class="sm:text-lg md:text-xl mt-6 " *ngIf="volunteerings.length > 0">
+          <li *ngFor="let opportunity of volunteerings" class="py-2">
+            ✔{{ opportunity.name }}
+          </li>
+        </ul>
+        <p class="" *ngIf="volunteerings.length === 0" class="sm:text-lg md:text-xl mt-6">
+          Si querés ver y conocer más sobre los voluntariados que ofrecemos y sus
+          características, <a href="/auth/volunteer-register" class="font-4 font-semibold text-deepPink">Registrate</a>.
+        </p>
       </li>
     </ul>
   </article>
