improvements user and org dashboards

--- a/front/src/app/modules/auth/components/form-volunteerregister/form-volunteerregister.component.html
+++ b/front/src/app/modules/auth/components/form-volunteerregister/form-volunteerregister.component.html
@@ -222,8 +222,8 @@
       </div>
     </form>
   </div>
-
-  <app-loading-spinner *ngIf="loading"></app-loading-spinner>
-
+  <div class="overlay" *ngIf="loading" >
+    <app-loading-spinner></app-loading-spinner>
+  </div>
   </article>
 </section>
