--- a/front/src/app/modules/dashboard/components/dashboardOrganization/completed-volunteering/completed-volunteering.component.html
+++ b/front/src/app/modules/dashboard/components/dashboardOrganization/completed-volunteering/completed-volunteering.component.html
@@ -43,7 +43,8 @@
           </tr>
         </thead>
         <tbody class="w-full bg-white divide-y divide-lightGray">
-          <tr *ngFor="let item of volunteeringsCompleted">
+          <ng-container  *ngFor="let item of volunteeringsCompleted" >
+          <tr *ngIf="!item.isProcessed">
             <td class="px-6 py-4 whitespace-no-wrap">
               {{ item.voluntariado.name }}
             </td>
@@ -63,26 +64,29 @@
               {{ item.usuario.fullName }}
               <span>{{ item.usuario.email }}</span>
             </td>
-
             <td
               class="py-4 whitespace-no-wrap text-center flex items-center justify-center"
             >
-              <button
-                *ngIf="item.isProcessed !== false"
+            <button
                 mat-icon-button
                 class="btn__delete font-semibold"
-                (click)="creditReward()"
+                (click)="creditReward('acreditar')"
               >
                 <span class="tooltip"><p>Acreditar recompensa</p></span>
 
                 <mat-icon class="text-[#00ff00] font-black">done</mat-icon>
               </button>
-              <button mat-icon-button class="btn__delete font-semibold">
+              <button
+                  mat-icon-button
+                  class="btn__delete font-semibold"
+                  (click)="creditReward('rechazar')"
+                >
                 <span class="tooltip"><p>Eliminar</p></span>
                 <mat-icon class="text-[#ff0000] font-black">clear</mat-icon>
               </button>
             </td>
           </tr>
+        </ng-container>
         </tbody>
       </table>
     </div>
