--- a/front/src/app/modules/dashboard/components/dashboardVolunteer/header/header.component.html
+++ b/front/src/app/modules/dashboard/components/dashboardVolunteer/header/header.component.html
@@ -66,7 +66,7 @@
     </article>
     <button
       class="w-full bg-mediumViolet text-white border-none py-1 px-2 rounded-md font-semibold uppercase shadow-md shadow-dimGray sm:text-xl"
-    >
+      (click)="redirectToExchange()">
       Canjear tus horas
     </button>
   </div>
